code/java/FactSetFundamentals/v2/docs/Fundamental.md


# Fundamental

FactSet Fundamentals Response item

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**requestId** | **String** | Identifier that was used for the request. |  [optional]
**fsymId** | **String** | FactSet Regional Security Identifier. Six alpha-numeric characters, excluding vowels, with an -R suffix (XXXXXX-R). Identifies the security&#39;s best regional security data series per currency. For equities, all primary listings per region and currency are allocated a regional-level permanent identifier. The regional-level permanent identifier will be available once a SEDOL representing the region/currency has been allocated and the identifiers are on FactSet. |  [optional]
**metric** | **String** | The requested &#x60;metric&#x60; input, representing the Fundamentals Data Item. For a definition of the item please use the &#x60;/fundamentals/v2/metrics&#x60; endpoint. |  [optional]
**periodicity** | [**PeriodicityEnum**](#PeriodicityEnum) | Periodicity or frequency of the fiscal periods, where  * **ANN** &#x3D; Annual Original,  * **ANN_R** &#x3D; Annual Latest,  * **QTR** &#x3D; Quarterly Original,  * **QTR_R** &#x3D; Quarterly Latest,  * **SEMI** &#x3D; Semi-Annual Original,  * **SEMI_R** &#x3D; Semi-Annual Latest,  * **CAL** &#x3D; Last Twelve Months Original,  * **LTM** &#x3D; Last Twelve Months Original, * **LTM_R** &#x3D; Last Twelve Months Latest,  * **LTMSG** &#x3D; Last Twelve Months Global [OA17959](https://my.apps.factset.com/oa/pages/17959),  * **LTM_SEMI** &#x3D; Last Twelve Months - Semi-Annual Data,  * **LTM_SEMI_R** &#x3D; Last Twelve Months - Semi-Annual  Latest Data  * **YTD** &#x3D; Year-to-date.   Please note that the coverage for SEMI_R and LTM_R may be limited as fewer companies report with these periodicities.  |  [optional]
**fiscalPeriod** | **Integer** | Fiscal Period indicator. Returns an integer representing the fiscal period for the requested item and periodicity.  QUARTERLY CODE: 1-First Quarter; 2-Second Quarter; 3-Third Quarter; 4-Fourth Quarter. SEMI-CODE: 1-First Semi-annual Period; 2-Second Semi-annual Period. | 
**fiscalYear** | **Integer** | Fiscal year of the reported period in YYYY format. |  [optional]
**fiscalPeriodLength** | **Integer** | Length of the fiscal period in days. |  [optional]
**fiscalEndDate** | **LocalDate** | The normalized data the fiscal period ended. |  [optional]
**reportDate** | **LocalDate** | The date the reported fiscal period ended. |  [optional]
**epsReportDate** | **LocalDate** | The date the EPS was reported for the requested periodicity. In YYYY-MM-DD format. |  [optional]
**updateType** | [**UpdateTypeEnum**](#UpdateTypeEnum) | Update Type: &#x60;Preliminary&#x60; - The period is updated from a report that usually contains limited or only key information., &#x60;Final&#x60; - The period is updated from a report where detailed information is available in financial statements including the notes to the line items. |  [optional]
**currency** | **String** | Currency code for the data. For a list of currency ISO codes, visit [Online Assistant Page #1470](https://oa.apps.factset.com/pages/1470). |  [optional]
**value** | [**FundamentalValue**](FundamentalValue.md) |  |  [optional]



## Enum: PeriodicityEnum

Name | Value
---- | -----
ANN | &quot;ANN&quot;
ANN_R | &quot;ANN_R&quot;
QTR | &quot;QTR&quot;
QTR_R | &quot;QTR_R&quot;
SEMI | &quot;SEMI&quot;
SEMI_R | &quot;SEMI_R&quot;
CAL | &quot;CAL&quot;
LTM | &quot;LTM&quot;
LTM_R | &quot;LTM_R&quot;
LTMSG | &quot;LTMSG&quot;
LTM_SEMI | &quot;LTM_SEMI&quot;
LTM_SEMI_R | &quot;LTM_SEMI_R&quot;
YTD | &quot;YTD&quot;



## Enum: UpdateTypeEnum

Name | Value
---- | -----
PRELIMINARY | &quot;Preliminary&quot;
FINAL | &quot;Final&quot;


## Implemented Interfaces

* Serializable


